# django-crispy-formset-modal

./: .editorconfig  .gitignore  404.html  CHANGELOG.md  MANIFEST.in  Makefile  README.md  conftest.py  fly.toml  index.html  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  tailwind.config.js  vite.config.js  wsgi.py
.deployment/: Dockerfile
.github/workflows/: deploy.yml  docs.yml  publish.yml
advanced-usage/: index.html
changelog/: index.html
contributing/: index.html
crispy_formset_modal/: __init__.py  configs.py  helper.py  layout.py
crispy_formset_modal/locale/es/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
crispy_formset_modal/static/crispy_formset_modal/js/: crispy-formset-modal.min.js  crispy-formset-modal.min.js.map
crispy_formset_modal/templates/crispy_formset_modal/bootstrap4/: edit_button.html  modal.html  table.html
crispy_formset_modal/templates/crispy_formset_modal/bootstrap5/: form.html  modal.html  table.html
crispy_formset_modal/templates/crispy_formset_modal/bulma/: edit_button.html  form.html  modal.html  table.html
crispy_formset_modal/templates/crispy_formset_modal/tailwind/: edit_button.html  empty_state.html  form.html  modal.html  table.html
crispy_formset_modal/templatetags/: formset_modal_tags.py
customizing/: index.html
demo/: autocomplete.py  forms.py  index.html  inlines.py  mixins.py  models.py  urls.py  views.py  widgets.py
demo/bootstrap4/: forms.py  inlines.py  urls.py  views.py
demo/bootstrap5/: forms.py  urls.py  views.py
demo/bulma/: forms.py  urls.py  views.py
demo/fixtures/: users.json
demo/migrations/: 0001_initial.py  0002_paymentterm.py  0003_auto_20230619_1147.py  0004_project_task.py
demo/static/: select2-bootstrap4.min.css  styles.css
demo/static/src/: input.css
demo/tailwind/: forms.py  urls.py  views.py
demo/templates/: base.html  demo.html  demo_index.html  index.html
demo/templates/bootstrap4/: base.html  demo.html  index.html
demo/templates/includes/: arrow-right.html
demo/templates/tailwind/: field.html
demo/templates/tailwind/layout/: row.html
docs/: advanced-usage.md  contributing.md  customizing.md  demo.md  faqs.md  getting-started.md  index.md  installation.md
faqs/: index.html
getting-started/: index.html
installation/: index.html
js/src/: formset-modal.js  formset.js  icons.js  index.js  modal-form.js  modal.js  utils.js
search/: search_index.json
